--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 Django==4.0.4
+django-cors-headers==3.11.0
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
 idna==3.3
